# NazoratchiAI

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  config.example.yaml  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
deploy/: gatekeeper.service  nazoratchi.service
gatekeeper/: __init__.py  __main__.py  actions.py  config.py  db.py  logging_setup.py  middleware.py  notifier.py  routing.py
gatekeeper/handlers/: callbacks.py  chat_member.py  commands.py  first_message.py  join_request.py  tenancy.py
gatekeeper/screening/: gemini_check.py  nudenet_runtime.py  orchestrator.py  photo_check.py  text_check.py  verdict.py
nazoratchi/: __init__.py  __main__.py  actions.py  config.py  db.py  logging_setup.py  menu.py  notifier.py  routing.py  strings.py
nazoratchi/handlers/: callbacks.py  chat_member.py  commands.py  first_message.py  join_request.py  tenancy.py
nazoratchi/screening/: gemini_check.py  nudenet_runtime.py  orchestrator.py  photo_check.py  text_check.py  textnorm.py  verdict.py
scripts/: calibrate.py  reset_user.py
tests/: conftest.py  test_config_db.py  test_first_message.py  test_i18n_reports.py  test_language.py  test_menu.py  test_migration.py  test_notifier.py  test_orchestrator_content.py  test_strings.py  test_tenancy.py  test_text_check.py  test_textnorm.py  test_verdict.py
