[project]
name = "gatekeeper"
version = "0.1.0"
description = "Telegram group gatekeeper bot: screens joining users' profile photos (NudeNet) and bio/name text (regex + Gemini) before admitting them."
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.15",
    "nudenet>=3.4.2",
    "google-genai>=1.0",
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
gatekeeper = "gatekeeper.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gatekeeper*"]
